# sistema-solar

./: .gitignore  CMakeLists.txt  README.md
include/: CuerpoCeleste.h
src/: Fisicas.cpp  main.cpp
